<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="BillViewer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="265dp">

        <ImageView
            android:id="@+id/billImage"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="centerCrop" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_clear_white_24px" />

        <!--
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCrop"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="138dp"
            app:backgroundTint="#D81B60"
            app:srcCompat="@drawable/ic_content_cut_white_24px" />
        -->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabOcr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/fabDelete"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_view" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/billTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/billTitle"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/nameTxt"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="32dp"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/billName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:text="" />

            <TextView
                android:id="@+id/descTxt"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="32dp"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop" />

            <TextView
                android:id="@+id/billShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/totalTxt"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="32dp"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total" />

            <TextView
                android:id="@+id/billTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/ticketDate"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="32dp"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/billDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:text="" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>