<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="EditMission">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryMission"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_missionEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:theme="@style/TextLabelMissionTheme">

            <EditText
                android:id="@+id/input_missionEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="#FFF"
                android:textSize="22dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_missionEditLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:theme="@style/TextLabelMissionTheme">

            <EditText
                android:id="@+id/input_missionEditLocation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/location"
                android:textColor="#FFF"
                android:textSize="22dp"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_missionEditStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    app:srcCompat="@drawable/ic_date_range_black_48px" />

                <TextView
                    android:id="@+id/input_missionEditStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:text="@string/dateStart"
                    android:textSize="21dp"
                    android:singleLine="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_missionEditFinish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    app:srcCompat="@drawable/ic_date_range_black_48px" />

                <TextView
                    android:id="@+id/input_missionEditFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:text="@string/dateFinish"
                    android:textSize="20dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/msgIsRepaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/text_isRepaid"
                    android:textSize="20dp"
                    android:singleLine="true"/>
                <CheckBox
                    android:id="@+id/check_isRepaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>