<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.ing.software.ticketapp.BillViewer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/circularLinear"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_personName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textSize="26dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_personLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="45dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_personLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_LastName"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textSize="26dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_personAcademicTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="45dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_personAcademicTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_AcademicTitle"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textSize="26dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/background_light"
        android:clickable="true"
        app:backgroundTint="@color/cardview_light_background"
        app:srcCompat="@drawable/ic_done_primary" />

</RelativeLayout>