<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ing.software.ticketapp.EditPerson">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_personEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_personEditName"
                android:layout_width="match_parent"
                android:inputType="textCapWords"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textSize="22dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_personEditLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_personEditLastName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textCapWords"
                android:hint="@string/hint_LastName"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textSize="22dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:layout_marginRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    app:srcCompat="@drawable/ic_store_black_48px" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:id="@+id/input_personEditAcademicTitle"
                        android:hint="@string/hint_AcademicTitle"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>